--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>House Floor Watch</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="House Floor Watch is a free email alert service that notifies subscribers when the U.S. House officially updates its Bills This Week schedule." />
 
@@ -13,44 +14,56 @@
       padding: 0;
       background: #ffffff;
       color: #111;
-      line-height: 1.5;
+      line-height: 1.55;
     }
+
     main {
       max-width: 720px;
       margin: 0 auto;
-      padding: 40px 20px;
+      padding: 48px 20px;
     }
+
     h1 {
       font-size: 28px;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
+      font-weight: 600;
     }
+
     h2 {
       font-size: 18px;
-      margin-top: 32px;
+      margin-top: 36px;
       margin-bottom: 8px;
+      font-weight: 600;
     }
+
     p, li {
       font-size: 15px;
     }
+
     ul {
       padding-left: 18px;
     }
+
     a {
       color: #0645ad;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .links {
-      margin: 20px 0;
+      margin: 24px 0;
     }
+
     .links a {
-      margin-right: 20px;
+      margin-right: 24px;
       font-weight: 500;
     }
+
     footer {
-      margin-top: 48px;
+      margin-top: 56px;
       font-size: 13px;
       color: #555;
     }
@@ -68,7 +81,7 @@
     </p>
 
     <div class="links">
-      <a href="https://docs.google.com/spreadsheets/d/1pc_-cgzEIR5BroOt43KUBnGC0dbz7cFrjmVafs_LoFE/edit?gid=1809365410#gid=1809365410">Subscribe</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfal6yniadc9ZDIFShzUOpx9ZIzxZNKo9AP4LS-r3zFsZuYYQ/viewform" target="_blank" rel="noopener">Subscribe</a>
       <a href="mailto:housefloorupdates@gmail.com">Contact</a>
     </div>
 
@@ -79,8 +92,9 @@
     </p>
 
     <p>
-      This service does not predict floor action or interpret House communications.
-      It only alerts subscribers when the official schedule page changes.
+      This service does not predict floor action, interpret House communications,
+      or provide analysis. It only alerts subscribers when the official schedule
+      page changes.
     </p>
 
     <h2>When emails are sent</h2>
@@ -100,7 +114,8 @@
     <h2>Unsubscribe and privacy</h2>
     <p>
       You may unsubscribe at any time using the instructions included in every alert email.
-      House Floor Watch does not sell subscriber information and does not use website tracking.
+      House Floor Watch does not sell subscriber information and does not use website tracking
+      or analytics.
     </p>
 
     <footer>
