--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="signup-container">
       <label class="signup-title" for="email">Subscribe to Floor Alerts</label>
       <div class="input-group">
-        <input type="email" id="email" placeholder="staffer@mail.house.gov" required>
+        <input type="email" id="email" placeholder="Your Email Here" required>
         <button id="submitBtn">Join List</button>
       </div>
       <div id="message"></div>
