--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"><title>Unsubscribe - House Floor Watch</title>
+  <meta charset="UTF-8"><title>Unsubscribe - The Capitol Wire</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: -apple-system, sans-serif; text-align: center; padding: 50px; }
-    #status { font-weight: 600; margin-top: 20px; }
+    body { font-family: 'Inter', sans-serif; text-align: center; padding: 50px; background-color: #f9fafb; color: #1f2937; }
+    h1 { color: #1e3a8a; margin-bottom: 10px; } /* Congressional Blue */
+    #status { font-weight: 500; margin-top: 20px; font-size: 1.1rem; }
+    .card { background: white; padding: 40px; border-radius: 8px; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1); max-width: 500px; margin: 0 auto; }
   </style>
 </head>
 <body>
-  <h1>House Floor Watch</h1>
-  <div id="status">Processing your request...</div>
+  <div class="card">
+    <h1>🏛️ The Capitol Wire</h1>
+    <div id="status">Processing your unsubscribe request...</div>
+  </div>
 
   <script>
     // CONNECT TO YOUR DATABASE
     const SUPABASE_URL = "https://jcrsdyyqrbtxyzhveszx.supabase.co";
-    const SUPABASE_KEY = "sb_publishable_oQOSOkFpJAPfmnINrAYYUg_FNMRBM1h"; // Safe for public use
+    const SUPABASE_KEY = "sb_publishable_oQOSOkFpJAPfmnINrAYYUg_FNMRBM1h"; 
     const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     async function handleUnsubscribe() {
-      // 1. Get the email from the link they clicked
+      // 1. Get the email from the link
       const urlParams = new URLSearchParams(window.location.search);
       const email = urlParams.get('email');
 
       if (!email) {
-        document.getElementById('status').innerText = "Invalid request. No email provided.";
+        document.getElementById('status').innerText = "Invalid link. No email found.";
         return;
       }
 
-      // 2. Delete it from the database
+      // 2. Delete from database
       const { error } = await _supabase.from('subscribers').delete().eq('email', email);
 
       if (error) {
-        document.getElementById('status').innerText = "Error unsubscribing. Please contact housefloorupdates@gmail.com";
+        document.getElementById('status').innerText = "System Error. Please reply to the email to unsubscribe.";
+        document.getElementById('status').style.color = "#dc2626";
       } else {
-        document.getElementById('status').innerText = `Success. ${email} has been removed from the list.`;
+        document.getElementById('status').innerText = `Success. ${email} has been removed from The Capitol Wire list.`;
+        document.getElementById('status').style.color = "#059669";
       }
     }
     handleUnsubscribe();
