--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     .hero { background: white; padding: 60px 20px; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1); margin-bottom: 40px; }
     h1 { font-size: 2.5rem; font-weight: 700; color: var(--primary); margin: 0 0 10px 0; letter-spacing: -0.02em; }
     .tagline { font-size: 1.25rem; font-weight: 600; color: #4b5563; margin-bottom: 15px; }
+    .tagline span { color: #059669; } /* Green for 'Free' */
+    
     .description { font-size: 1.1rem; color: #6b7280; max-width: 600px; margin: 0 auto 30px auto; }
 
     /* Form */
@@ -31,8 +33,8 @@
     button:hover { background: #1e40af; }
     button:disabled { background: #9ca3af; cursor: not-allowed; }
 
-    /* Features Grid */
-    .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; text-align: left; margin-top: 40px; }
+    /* Features Grid - Updated for 3 items */
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; text-align: left; margin-top: 40px; }
     .card { background: white; padding: 25px; border-radius: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
     .card h3 { color: var(--primary); margin-top: 0; font-size: 1.1rem; }
     .card p { font-size: 0.95rem; color: #666; margin-bottom: 0; }
@@ -56,9 +58,10 @@
   <div class="container">
     <div class="hero">
       <h1>🏛️ The Capitol Wire</h1>
-      <p class="tagline">Real-time alerts for the U.S. House Floor Schedule.</p>
+      <p class="tagline"><span>Free</span>, real-time alerts for the U.S. House Floor Schedule.</p>
       <p class="description">
-        Stop manually refreshing <code>docs.house.gov</code>. Our system monitors the Majority Leader’s official schedule 24/7 and notifies you the instant a bill is added, removed, or updated.
+        The official House website doesn't offer alerts. So we built a tool that does. 
+        We monitor <code>docs.house.gov</code> 24/7 and notify you the instant a bill is added, removed, or updated.
       </p>
 
       <div class="input-group">
@@ -71,7 +74,7 @@
     <div class="grid">
       <div class="card">
         <h3>⚡ Instant Detection</h3>
-        <p>We ping the House Clerk's site every minute. If the "Bills This Week" page changes, you know about it immediately.</p>
+        <p>We ping the House Clerk's site every minute. If the official "Bills This Week" page changes, you know about it immediately.</p>
       </div>
       <div class="card">
         <h3>🚫 Zero Noise</h3>
@@ -80,10 +83,6 @@
       <div class="card">
         <h3>📝 Change Summaries</h3>
         <p>Our alerts highlight exactly what changed—whether it's a new suspension bill, a rule change, or a time update.</p>
-      </div>
-      <div class="card">
-        <h3>🔒 Secure & Private</h3>
-        <p>Your email is used solely for alerts. No tracking, no ads, and you can unsubscribe instantly with one click.</p>
       </div>
     </div>
 
