Refine feature descriptions in index.html
Updated feature descriptions for clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     button:hover { background: #1e40af; }
     button:disabled { background: #9ca3af; cursor: not-allowed; }
 
-    /* Features Grid - Updated for 3 items */
+    /* Features Grid */
     .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; text-align: left; margin-top: 40px; }
     .card { background: white; padding: 25px; border-radius: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
     .card h3 { color: var(--primary); margin-top: 0; font-size: 1.1rem; }
@@ -60,8 +60,8 @@
       <h1>🏛️ The Capitol Wire</h1>
       <p class="tagline"><span>Free</span>, real-time alerts for the U.S. House Floor Schedule.</p>
       <p class="description">
-        The official House website doesn't offer alerts. So we built a tool that does. 
-        We monitor <code>docs.house.gov</code> 24/7 and notify you the instant a bill is added, removed, or updated.
+        The official House website doesn't offer alerts. This tool does. 
+        It monitors <code>docs.house.gov</code> 24/7 and notifies you the instant a bill is added, removed, or updated—saving you time on manual checks.
       </p>
 
       <div class="input-group">
@@ -74,15 +74,15 @@
     <div class="grid">
       <div class="card">
         <h3>⚡ Instant Detection</h3>
-        <p>We ping the House Clerk's site every minute. If the official "Bills This Week" page changes, you know about it immediately.</p>
+        <p>The House Clerk's site is pinged every minute. If the official "Bills This Week" page changes, updates are sent immediately.</p>
       </div>
       <div class="card">
         <h3>🚫 Zero Noise</h3>
-        <p>We don't send newsletters or opinion pieces. You only receive an email when the official schedule actually changes.</p>
+        <p>No newsletters or opinion pieces. This service only sends an email when the official schedule actually changes.</p>
       </div>
       <div class="card">
         <h3>📝 Change Summaries</h3>
-        <p>Our alerts highlight exactly what changed—whether it's a new suspension bill, a rule change, or a time update.</p>
+        <p>Alerts highlight exactly what changed—whether it's a new suspension bill, a rule change, or a time update.</p>
       </div>
     </div>
 
