Update URL in description for monitoring site

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p class="tagline"><span>Free</span>, real-time alerts for the U.S. House Floor Schedule.</p>
       <p class="description">
         The official House website doesn't offer alerts. This tool does. 
-        It monitors <code>docs.house.gov</code> 24/7 and notifies you the instant a bill is added, removed, or updated—saving you time on manual checks.
+        It monitors <code>docs.house.gov/floor/</code> 24/7 and notifies you the instant a bill is added, removed, or updated—saving you time on manual checks.
       </p>
 
       <div class="input-group">
