Update contact email in privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -29,6 +29,6 @@
   <p>We may update this policy in the future. If we make significant changes to how we handle your data, we will notify you via email.</p>
 
   <h2>5. Contact</h2>
-  <p>For questions, contact us at <a href="mailto:contact@thecapitolwire.com">contact@thecapitolwire.com</a>.</p>
+  <p>For questions, contact us at <a href="mailto:zach@thecapitolwire.com">zach@thecapitolwire.com</a>.</p>
 </body>
 </html>
