--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     .hero { text-align: center; padding: 50px 0 20px; } 
     .hero h1 { font-family: 'Merriweather', serif; font-size: 2.5rem; color: var(--primary); margin-bottom: 15px; line-height: 1.1; }
     
-    /* UPDATED HERO TEXT */
+    /* UPDATED HERO TEXT (Cleaner) */
     .hero p { 
         font-size: 1.1rem; 
         color: #64748b; 
@@ -67,7 +67,6 @@
         line-height: 1.6; 
     }
     .hero p a { color: var(--accent); text-decoration: underline; text-underline-offset: 2px; }
-    .hero p strong { color: var(--primary); font-weight: 600; }
 
     /* FORM */
     .form-wrapper { max-width: 420px; margin: 0 auto; display: flex; gap: 8px; }
@@ -150,7 +149,7 @@
     <div class="container">
       <h1>House Floor Updates</h1>
       <p>
-        Official scheduling data sourced directly from <a href="https://docs.house.gov/floor/Default.aspx" target="_blank">docs.house.gov/floor</a>, but <strong>delivered to your inbox</strong> the moment it is published. Stop refreshing the page and start getting <strong>instant email alerts</strong>.
+        Official scheduling data sourced directly from <a href="https://docs.house.gov/floor/Default.aspx" target="_blank">docs.house.gov/floor</a>, but delivered to your inbox the moment it is published. Stop refreshing the page and start getting instant email alerts.
       </p>
       
       <div class="form-wrapper">
