--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     .dropdown-content a:last-child { border-bottom: none; }
     .dropdown-content a:hover { background-color: #f8fafc; color: var(--accent); }
 
-    /* HERO - STRICT SPACING (30px Top/Bottom) */
+    /* HERO */
     .hero { text-align: center; padding: 30px 0 30px; } 
     
     .hero h1 { 
@@ -101,7 +101,7 @@
         color: #475569;
         font-size: 1.15rem;
         line-height: 1.9;
-        margin: 0 auto 25px; /* Tighter to button */
+        margin: 0 auto 25px; /* Gap between checklist and form */
         max-width: 720px;
     }
     .hero-checklist strong { color: var(--primary); font-weight: 700; }
@@ -118,18 +118,18 @@
     /* MSG */
     .msg { margin-top: 5px; font-size: 0.8rem; min-height: 20px; } 
 
-    /* DATA SOURCE LINE - PROMINENT & SPACED */
-    .source-wrapper { margin-top: 30px; } /* Matches Live Feed padding */
+    /* DATA SOURCE LINE - EVEN SPACING */
+    .source-wrapper { margin-top: 25px; } /* Reduced to match checklist margin */
     .source-line { 
         font-size: 0.95rem; 
-        color: #1e293b; /* Darker Text */
-        background: #e2e8f0; /* Darker BG */
+        color: #1e293b; 
+        background: #e2e8f0;
         padding: 10px 20px;
         border-radius: 99px;
         display: inline-block;
-        font-weight: 700; /* Bolder */
-        border: 1px solid #cbd5e1; /* Visible Border */
-        box-shadow: 0 2px 4px rgba(0,0,0,0.05); /* Subtle Lift */
+        font-weight: 700;
+        border: 1px solid #cbd5e1;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
     .source-line a { color: var(--accent); text-decoration: none; border-bottom: 1px dotted var(--accent); }
 
