--- a/index.html
+++ b/index.html
@@ -88,9 +88,15 @@
         color: var(--light-blue);
         vertical-align: bottom; 
         line-height: 1.3;
-        padding-right: 8px; 
-        animation: typing 1.2s steps(11, end) forwards, blink-caret 0.8s step-end infinite;
+        /* Removed padding-right from here */
+        /* Changed steps from 11 to 7 (for "Agenda."), duration to 1.5s for smoother look */
+        animation: typing 1.5s steps(7, end) forwards, blink-caret 0.8s step-end infinite;
     }
+    /* Add padding to the inner span to fix the cut-off 'a' */
+    .typing-text span {
+        padding-right: 6px;
+    }
+
     @keyframes typing { from { width: 0; } to { width: 100%; } }
     @keyframes blink-caret { from, to { border-color: transparent; } 50% { border-color: #3b82f6; } }
     
@@ -101,7 +107,7 @@
         color: #475569;
         font-size: 1.15rem;
         line-height: 1.9;
-        margin: 0 auto 25px; /* Gap between checklist and form */
+        margin: 0 auto 25px;
         max-width: 720px;
     }
     .hero-checklist strong { color: var(--primary); font-weight: 700; }
@@ -118,8 +124,8 @@
     /* MSG */
     .msg { margin-top: 5px; font-size: 0.8rem; min-height: 20px; } 
 
-    /* DATA SOURCE LINE - EVEN SPACING */
-    .source-wrapper { margin-top: 25px; } /* Reduced to match checklist margin */
+    /* DATA SOURCE LINE */
+    .source-wrapper { margin-top: 25px; }
     .source-line { 
         font-size: 0.95rem; 
         color: #1e293b; 
@@ -217,7 +223,7 @@
     <div class="container">
       <h1>
         Real-Time Alerts for the<br>
-        <span style="color:var(--primary);">House Floor</span> <span class="typing-wrapper"><span class="typing-text">Agenda.</span></span>
+        <span style="color:var(--primary);">House Floor</span> <span class="typing-wrapper"><span class="typing-text"><span>Agenda.</span></span></span>
       </h1>
       
       <div class="hero-checklist">
