--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
         color: var(--accent);
         vertical-align: bottom; 
         line-height: 1.3;
-        text-indent: 6px; padding-right: 8px; 
-        animation: typing 1.5s steps(7, end) forwards, blink-caret 0.8s step-end infinite;
+        /* text-indent pushes text right to reveal italic 'A' foot */
+        text-indent: 6px; 
+        padding-right: 8px; 
+        /* 14 steps for "Weekly Agenda." */
+        animation: typing 2s steps(14, end) forwards, blink-caret 0.8s step-end infinite;
     }
     @keyframes typing { from { width: 0; } to { width: 100%; } }
     @keyframes blink-caret { from, to { border-color: transparent; } 50% { border-color: #3b82f6; } }
@@ -212,7 +215,7 @@
     <div class="container">
       <h1>
         Real-Time Alerts for the<br>
-        <span style="color:var(--primary);">House Floor</span> <span class="typing-wrapper"><span class="typing-text"><span>Agenda.</span></span></span>
+        <span style="color:var(--primary);">House Floor</span> <span class="typing-wrapper"><span class="typing-text"><span>Weekly Agenda.</span></span></span>
       </h1>
       
       <div class="hero-checklist">
