--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     });
                 }
             } else {
-                scheduleList.innerHTML = '<div style="padding:40px; text-align:center;">No active schedule.</div>';
+                scheduleList.innerHTML = '<div style="padding:40px; text-align:center;"> </div>';
             }
         } catch (e) { console.error(e); }
     }
