--- a/index.html
+++ b/index.html
@@ -237,14 +237,13 @@
     <div class="container">
       <h1>
         Real-Time Alerts for the<br>
-        <span style="color:var(--primary);">House Floor</span> 
-        <span class="typing-wrapper"><span class="typing-text">Weekly Agenda.</span></span>
+        <span style="color:var(--primary);">House Floor Weekly Agenda.</span>
       </h1>
       
       <div class="hero-checklist">
-        <div><span class="check">✓</span> Monitors the <strong>House floor</strong> for changes to the weekly docket.</div>
-        <div><span class="check">✓</span> Tracks <strong>Suspensions, Rules, and Possible Considerations</strong>.</div>
-        <div><span class="check">✓</span> <strong>Instant email alerts</strong> directly from official Clerk data.</div>
+        <div><span class="check">✓</span> Monitors <strong>docs.house.gov</strong> and <strong>MajorityLeader.gov</strong> every 60 seconds.</div>
+        <div><span class="check">✓</span> Auto-detects <strong>Advance Notices</strong> (items not yet filed with the Clerk).</div>
+        <div><span class="check">✓</span> <strong>Instant email alerts</strong> directly to you for free.</div>
       </div>
       
       <div class="form-wrapper">
