--- a/terms.html
+++ b/terms.html
@@ -169,11 +169,13 @@
     </ul>
     <p>We are a private entity and are <strong>not affiliated with, endorsed by, or a part of the United States Government</strong> or the U.S. House of Representatives.</p>
 
-    <h2>2. Data Accuracy & Availability</h2>
-    <p>Our service relies on the availability and accuracy of third-party government servers. While our "Gap Analysis" engine is designed to detect changes rapidly:</p>
+    <h2>2. Data Accuracy & Algorithmic Limitations</h2>
+    <p>Our service relies on automated scraping, aggregation algorithms, and third-party government servers. By using this service, you acknowledge that:</p>
     <ul>
-        <li>We cannot guarantee 100% uptime or accuracy if the underlying government source data is delayed, redacted, or offline.</li>
-        <li>Alerts are provided "as-is" and should be used as a supplementary intelligence tool, not as the sole legal record of House proceedings.</li>
+        <li><strong>Algorithmic Errors:</strong> Our "Gap Analysis" engine processes complex data structures. While we rigorously test our code, automated systems may occasionally misinterpret, miscategorize, or fail to aggregate legislative items correctly.</li>
+        <li><strong>Source Volatility:</strong> The accuracy of our alerts depends entirely on the format and stability of government websites. If a government source changes its HTML structure, file naming conventions, or publication methods without notice, our service may experience interruptions or parsing errors.</li>
+        <li><strong>No Guarantee of Completeness:</strong> We cannot guarantee 100% uptime or accuracy if the underlying government source data is delayed, redacted, corrupted, or offline.</li>
+        <li><strong>Supplementary Tool:</strong> Alerts are provided "as-is" and should be used strictly as a supplementary intelligence tool. You agree not to rely on The Capitol Wire as the sole or official legal record of House proceedings.</li>
     </ul>
 
     <h2>3. Acceptable Use</h2>
@@ -181,15 +183,15 @@
     <ul>
         <li>Attempt to reverse engineer, scrape, or overload our API infrastructure.</li>
         <li>Use the service to distribute spam or malicious content.</li>
-        <li> resell or redistribute our real-time alert feed without express written permission.</li>
+        <li>Resell or redistribute our real-time alert feed without express written permission.</li>
     </ul>
 
     <h2>4. Limitation of Liability</h2>
     <p>To the fullest extent permitted by law, The Capitol Wire shall not be liable for any direct, indirect, incidental, or consequential damages resulting from:</p>
     <ul>
-        <li>Errors or omissions in the legislative data provided by government sources.</li>
+        <li>Errors, omissions, or inaccuracies in the legislative data provided by government sources or our aggregation algorithms.</li>
         <li>Delays in email delivery caused by third-party providers (e.g., AWS, internet service providers).</li>
-        <li>Any reliance placed on the alerts for legislative or trading decisions.</li>
+        <li>Any reliance placed on the alerts for legislative, legal, or financial decisions.</li>
     </ul>
 
     <h2>5. Modifications to Service</h2>
