--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
     .typing-wrapper { display: inline-block; }
     
     .typing-text {
-        display: inline-block; /* <--- THIS FIXES THE BUG */
-        vertical-align: bottom; /* Keeps it aligned with "House Floor" */
+        display: inline-block;
         font-family: 'Merriweather', serif; 
         font-weight: 700; 
         color: var(--brand-primary);
@@ -149,9 +148,14 @@
         white-space: nowrap;
         overflow: hidden;
         width: 0;
-        /* Changed 'steps(14)' to 'ease-out' because Merriweather is not a monospace font.
-           Steps would cut through the wider letters like 'W'. Smooth is better here. */
-        animation: typing 2.5s ease-out forwards, blink-caret 0.8s step-end infinite;
+        
+        /* FIX 1: Restored 'steps(14)' to match the 14 characters in "Weekly Agenda." */
+        animation: typing 2.5s steps(14, end) forwards, blink-caret 0.8s step-end infinite;
+
+        /* FIX 2: Added line-height and padding to stop the 'g' from being cut off */
+        line-height: 1.3;
+        padding-bottom: 5px; 
+        vertical-align: bottom; 
     }
     @keyframes typing { to { width: 100%; } }
     @keyframes blink-caret { 50% { border-color: transparent; } }
