--- a/index.html
+++ b/index.html
@@ -149,13 +149,15 @@
         overflow: hidden;
         width: 0;
         
-        /* FIX 1: Restored 'steps(14)' to match the 14 characters in "Weekly Agenda." */
-        animation: typing 2.5s steps(14, end) forwards, blink-caret 0.8s step-end infinite;
+        /* FIX 1: Faster Speed (Changed 2.5s -> 1.5s) */
+        animation: typing 1.5s steps(14, end) forwards, blink-caret 0.8s step-end infinite;
 
-        /* FIX 2: Added line-height and padding to stop the 'g' from being cut off */
+        /* FIX 2: Perfect Alignment */
+        /* 'baseline' ensures the text sits on the same line as "House Floor", ignoring the padding below */
+        vertical-align: baseline; 
+        
         line-height: 1.3;
-        padding-bottom: 5px; 
-        vertical-align: bottom; 
+        padding-bottom: 5px; /* Keeps the 'g' safe */
     }
     @keyframes typing { to { width: 100%; } }
     @keyframes blink-caret { 50% { border-color: transparent; } }
