--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         }
 
         // Sort Newest First
-        const displayData = [...filteredData].sort((a, b) => b.id - a.id);
+        const displayData = [...filteredData].sort((a, b) => a.id - b.id);
 
         // Update Status Line
         const newestItem = displayData[0];
